--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,8 +1,9 @@
+# version 1.0
 name: Build and push
 on:
   push:
-    branches:
-      - master
+    tags:
+      - '*'
 
 jobs:
   work:
@@ -11,12 +12,16 @@ jobs:
     steps:
       - name: Check out the code
         uses: actions/checkout@v2
+      - name: Lowercase
+        id: lower
+        uses: ASzc/change-string-case-action@v1
+        with:
+          string: ${{ github.repository }}
       - name: Build & Push docker image
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          image: democraciaenred/somosmuchas-activa-back
-          tag: latest
-          registry: containers.pkg.github.com
+          image: ${{ steps.lower.outputs.lowercase }}
+          registry: ghcr.io
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: Trigger stack update
@@ -27,3 +32,8 @@ jobs:
           customHeaders: '{"Accept":  "application/vnd.github.everest-preview+json"}'
           bearerToken: ${{ secrets.REGISTRY_PASSWORD }}
           data: '{"event_type": "update-stack"}'
+      - name: Notify Slack
+        uses: craftech-io/slack-action@v1
+        with:
+          slack_webhook_url: ${{ secrets.SLACK_WEBHOOK }}
+        if: always()
